--- a/.gitignore
+++ b/.gitignore
@@ -70,8 +70,9 @@ cmake-build-*/
 # File-based project format
 *.iws
 
-# IntelliJ
+# Builder folders
 out/
+build/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
